# dec

./: .gitmodules  README.md
ca_application/: README.md
ca_application/app_gazebo/: CMakeLists.txt  package.xml
ca_application/app_gazebo/include/: README.md
ca_application/app_gazebo/launch/: spawn_gazebo_obstacle.launch
ca_application/app_gazebo/src/: obstacle_spawner_node.cpp
ca_application/app_gui/: CMakeLists.txt  package.xml
ca_application/app_gui/include/app_gui/: main_window.hpp  qnode.hpp
ca_application/app_gui/launch/: test_gui.launch
ca_application/app_gui/resources/: images.qrc
ca_application/app_gui/src/: main.cpp  main_window.cpp  qnode.cpp
ca_application/app_gui/ui/: main_window.ui
ca_application/app_msgs/: CMakeLists.txt  package.xml
ca_application/app_msgs/action/: custom_action_example.action
ca_application/app_msgs/msg/: custom_msg_example.msg
ca_application/app_nodes/: CMakeLists.txt  package.xml
ca_application/app_nodes/config/: README.md  labo_cams_serials
ca_application/app_nodes/launch/: README.md  dual_rs_real_ur10e_environ.launch  dual_rs_sim_ur10e_environ.launch  dual_rs_standalone.launch
ca_application/app_nodes/scripts/: README.md
ca_application/app_nodes/src/: README.md  dual_camera_test_node.cpp
ca_application/app_nodes/src/vision/: image_conversion_class.cpp
ca_application/ca_apf_application/: CMakeLists.txt  package.xml
ca_application/ca_apf_application/config/: README.md
ca_application/ca_apf_application/include/ca_apf_application/: flacco_apf_depth_obstacle_publisher.h  obstacle_pub_timing.h
ca_application/ca_apf_application/include/helper/: robotiq_gripper_helper.h
ca_application/ca_apf_application/scripts/: launch_gl_compat.bash
ca_application/ca_apf_application/src/: apf_ee_recorder_node.cpp  flacco_apf_depth_obstacle_publisher.cpp  flacco_apf_depth_obstacle_publisher_node.cpp
ca_application/ca_apf_application/src/helper/: robotiq_gripper_helper.cpp
ca_application/ca_apf_msgs/: CMakeLists.txt  package.xml
ca_application/ca_apf_msgs/srv/: custom_srv_example.srv
ca_application/ca_apf_scene_segmentation/: CMakeLists.txt  package.xml
ca_application/ca_apf_scene_segmentation/include/vision/: image_conversion_class.h  image_processing_class.h  image_processing_class_comienzo.h
ca_application/ca_apf_scene_segmentation/launch/: ImagenesTf.launch  Sim_image.launch
ca_application/ca_apf_scene_segmentation/scripts/: README.md
ca_application/ca_apf_scene_segmentation/src/: ObtenerImagensyTf.cpp  image_processing_node.cpp
ca_application/ca_apf_simulation/: CMakeLists.txt  README.md  package.xml
ca_application/ca_apf_simulation/launch/: spawn_gazebo_obstacle.launch  spawn_obstacle.launch
ca_application/ca_apf_simulation/src/: obstacle_spawner_node.cpp
ca_application/ca_apf_simulation/urdf/: gazebo_obstacles.urdf.xacro
ca_application/jaco_decoupled_test/: CMakeLists.txt  package.xml
ca_application/jaco_decoupled_test/src/: jaco_publisher_node.cpp
ca_application/trajectory_recorder_msgs/: CMakeLists.txt  package.xml
ca_application/trajectory_recorder_msgs/srv/: record_planned_traj.srv  start_recording_traj.srv  stop_recording_traj.srv
ca_control/: README.md
ca_robot_setups/: README.md
ca_robot_setups/ca_apf_moveit_configs/: README.md
ca_robot_setups/ca_apf_robot/: CMakeLists.txt  package.xml
ca_robot_setups/ca_apf_robot/config/: base.world  filter_parameters.yaml  obstacle_publish.yaml  rtt_apf_controllers.yaml  rviz_config.rviz  sim_obstacle_publish.yaml  sim_rtt_apf_controllers.yaml
ca_robot_setups/ca_apf_robot/launch/: hardware_remote_setup.launch  hardware_setup.launch  sim_setup.launch
ca_robot_setups/ca_apf_robot/rqt_config/: dashboard.perspective
ca_robot_setups/ca_apf_robot/urdf/: gripper.xacro  ur10e.urdf
rsc/dec/: dec_control.drawio  dec_docker.drawio  dec_ros_nodes.drawio
rsc/use_case/: UseCaseFlowDiagram.drawio  model_elements.drawio  model_elements_taks.drawio  overall_diagram.drawio  use_case_architecture.drawio
(+5 files in other folders)
